--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "cordova-plugin-splashscreen",
     "com.ionic.keyboard"
   ],
-  "cordovaPlatforms": []
-},
+  "cordovaPlatforms": [],
 
   "main": "server.js",
   "scripts": {
