--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,12 @@
   },
   "resolutions": {
     "ionic": "1.1.0",
-
-    "angular": "1.4.3"
+    "angular": "1.4.6",
+    "angular-animate": "1.4.3",
+    "angular-sanitize": "1.4.3"
   },
-
+  "dependencies": {
+    "angular-cookies": "~1.4.6",
+    "ionic": "~1.1.0"
+  }
 }
