--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "SocialMuse: An Ionic project",
   "dependencies": {
+    "angular-cookies": "^1.5.0-beta.0",
     "express": "^4.13.3",
-	"firebase": "^2.2.9",
+    "firebase": "^2.2.9",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
@@ -18,7 +19,7 @@
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0",
-	   "chai": "^3.2.0",
+    "chai": "^3.2.0",
     "mocha": "^2.3.1",
     "simon": "^0.2.3"
   },
@@ -30,13 +31,11 @@
     "com.ionic.keyboard"
   ],
   "cordovaPlatforms": [],
-
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
- 
   "engines": {
     "node": "0.12.7"
   }
